syntax = "proto3";

option go_package = "/activity";

package activity;

message Activity {
  string id = 1;
  int64 strava_id = 2;
  int64 strava_athlete_id = 3;
  string name = 4;
  string type = 5;
  float distance = 6;
  int64 elapsed_time = 7;
  float total_elevation_gain = 8;
  int64 start_date = 9;
  optional float start_lat = 10;
  optional float start_lng = 11;
  optional float end_lat = 12;
  optional float end_lng = 13;
  optional float average_speed = 14;
  optional float average_cadence = 15;
  optional float average_temp = 16;
  optional float average_heartrate = 17;
  optional float max_heartrate = 18;
  float trimp = 19;
}

service ActivityService {
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc GetMine (GetMineRequest) returns (GetMineResponse) {}
  rpc GetFeatured (GetFeaturedRequest) returns (GetFeaturedResponse) {}

  rpc List (ListRequest) returns (ListResponse) {}
  rpc ListMine (ListMineRequest) returns (ListMineResponse) {}
  rpc ListFeatured (ListFeaturedRequest) returns (ListFeaturedResponse) {}
}

message GetRequest {
  string id = 1;
}
message GetResponse {
  Activity activity = 1;
}
message GetMineRequest {
  string id = 1;
}
message GetMineResponse {
  Activity activity = 1;
}
message GetFeaturedRequest {
  string id = 1;
}
message GetFeaturedResponse {
  Activity activity = 1;
}


message ListRequest {}
message ListResponse {
  repeated Activity activities = 1;
}
message ListMineRequest {}
message ListMineResponse {
  repeated Activity activities = 1;
}
message ListFeaturedRequest {}
message ListFeaturedResponse {
  repeated Activity activities = 1;
}